--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Happy Life Recruting Agency</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -25,6 +25,88 @@
 
     <!-- Main Container Starts -->
     <div class="main-container">
+        <div class="main-container-wrap">
+
+            <!-- hero starts -->
+            <div class="hero-section">
+                <div class="container">
+                    <div class="hero-wrap">
+                        <div class="hero-head">
+                            <p data-aos="fade-up">Wanna find Top Talent - Work with the best</p>
+                            <h2 data-aos="fade-up" data-aos-delay="100">Hey</h2>
+                            <h2 class="white-outline" data-aos="fade-up" data-aos-delay="200">ROCKSTARS!</h2>
+                        </div>
+                        <a href="" class="button home-btn"><span>Explore <img src="./img/arrow-right.svg" alt=""></span>
+                        </a>
+                        <div class="learn-more" data-aos="fade-down">
+                            <img src="./img/learn-more.svg" alt="">
+                        </div>
+                        <div class="hero-img-wrap">
+                            <div class="hero-img" data-aos="zoom-in-up">
+                                <img src="./img/hero-img.png" alt="">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="hero-stickers">
+                    <div class="sticker sticker-1" data-aos="zoom-in">
+                        <img src="./img/sticker-1.svg" alt="">
+                    </div>
+                    <div class="sticker sticker-2" data-aos="zoom-in">
+                        <img src="./img/sticker-2.svg" alt="">
+                    </div>
+                    <div class="sticker sticker-3" data-aos="zoom-in">
+                        <img src="./img/sticker-3.svg" alt="">
+                    </div>
+                    <div class="sticker sticker-4" data-aos="zoom-in">
+                        <img src="./img/sticker-4.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <!-- hero ends -->
+
+            <!-- work starts -->
+            <div class="work-wrap">
+                <div class="work-bg"></div>
+                <div class="container">
+                    <div class="work-container">
+                        <div class="comm-head">
+                            <h2>Why work with US?</h2>
+                            <p>Find your perfect match with Happy Life Recruitment Agency, the ultimate recruitment
+                                solution for both candidates and clients. Our team is dedicated to providing
+                                personalized, jaw-dropping hiring experiences through our thorough and effective
+                                recruitment process. With a focus on building strong, authentic relationships, we
+                                understand the unique needs of both candidates and clients, leading to successful
+                                placements. Don't miss out on the opportunity for hassle-free, fun, and effective
+                                recruitment.<br />
+                                Contact Happy Life Recruitment Agency for your successful hiring journey today.</p>
+                        </div>
+                        <div class="work-txt-img">
+                            <div class="work-img">
+                                <img src="./img/work-1.jpg" alt="">
+                            </div>
+                            <div class="txt-2">
+                                <p>From Caterpillar to Butterfly, My Candidates and Clients Grow & smile!</p>
+                            </div>
+                            <div class="work-img">
+                                <img src="./img/work-2.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="work-swiper-wrap">
+                    <div class="work-swiper">
+                        <div class="swiper swiper-work">
+                            <div class="swiper-slide"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- work ends -->
+
+
+        </div>
     </div>
     <!-- Main Container Ends -->
 
@@ -35,6 +117,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/common.js"></script>
     <script src="js/home.js"></script>
 </body>
