--- a/header.html
+++ b/header.html
@@ -14,7 +14,7 @@
         </li>
     </ul>
     <div class="header-btn">
-        <a href="" class="button"><img src="./img/contact.svg" alt=""> CONTACT</a>
+        <a href="" class="button"><span><img src="./img/contact.svg" alt=""> CONTACT</span> </a>
     </div>
 </div>
 
