--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="">
     <meta http-equiv="cache-control" content="max-age=0" />
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="expires" content="0" />
     <meta http-equiv="pragma" content="no-cache" />
-    <meta name="theme-color" content="#ff5069" />
+    <meta name="theme-color" content="#E5FCFC" />
     <title>Happy Life Recruting Agency</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -67,43 +68,213 @@
             <!-- hero ends -->
 
             <!-- work starts -->
-            <div class="work-wrap">
-                <div class="work-bg"></div>
-                <div class="container">
-                    <div class="work-container">
-                        <div class="comm-head">
-                            <h2>Why work with US?</h2>
-                            <p>Find your perfect match with Happy Life Recruitment Agency, the ultimate recruitment
-                                solution for both candidates and clients. Our team is dedicated to providing
-                                personalized, jaw-dropping hiring experiences through our thorough and effective
-                                recruitment process. With a focus on building strong, authentic relationships, we
-                                understand the unique needs of both candidates and clients, leading to successful
-                                placements. Don't miss out on the opportunity for hassle-free, fun, and effective
-                                recruitment.<br />
-                                Contact Happy Life Recruitment Agency for your successful hiring journey today.</p>
-                        </div>
-                        <div class="work-txt-img">
-                            <div class="work-img">
-                                <img src="./img/work-1.jpg" alt="">
+            <div class="work-client-wrap">
+                <div class="work-wrap">
+                    <div class="work-tags">
+                        <div class="work-tag work-tag-1">professional</div>
+                        <div class="work-tag work-tag-2">COACH</div>
+                        <div class="work-tag work-tag-3">SUPPORTIVE</div>
+                        <div class="work-tag work-tag-4">VISIONARY</div>
+                        <div class="work-tag work-tag-5">NURTURING</div>
+                    </div>
+                    <div class="work-bg"></div>
+                    <div class="container">
+                        <div class="work-container">
+                            <div class="comm-head">
+                                <h2>Why work with US?</h2>
+                                <p>Find your perfect match with Happy Life Recruitment Agency, the ultimate recruitment
+                                    solution for both candidates and clients. Our team is dedicated to providing
+                                    personalized, jaw-dropping hiring experiences through our thorough and effective
+                                    recruitment process. With a focus on building strong, authentic relationships, we
+                                    understand the unique needs of both candidates and clients, leading to successful
+                                    placements. Don't miss out on the opportunity for hassle-free, fun, and effective
+                                    recruitment.<br />
+                                    Contact Happy Life Recruitment Agency for your successful hiring journey today.</p>
                             </div>
-                            <div class="txt-2">
-                                <p>From Caterpillar to Butterfly, My Candidates and Clients Grow & smile!</p>
-                            </div>
-                            <div class="work-img">
-                                <img src="./img/work-2.jpg" alt="">
+                            <div class="work-txt-img">
+                                <div class="work-img">
+                                    <img src="./img/work-1.jpg" alt="">
+                                </div>
+                                <div class="txt-2">
+                                    <p>From Caterpillar to Butterfly, My Candidates and Clients Grow & smile!</p>
+                                </div>
+                                <div class="work-img">
+                                    <img src="./img/work-2.jpg" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
                 <div class="work-swiper-wrap">
                     <div class="work-swiper">
                         <div class="swiper swiper-work">
-                            <div class="swiper-slide"></div>
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="client-box">
+                                        <div class="client-head">
+                                            <div class="client-stars">
+                                                <div class="stars-wrap">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                </div>
+                                                <h5>Carolyn</h5>
+                                            </div>
+                                            <h3 class="client-head-txt">
+                                                “Very Professional”
+                                            </h3>
+                                        </div>
+                                        <div class="client-content">
+                                            <p>Ryelle helped me with my modeling career she took my photos and I was
+                                                able to
+                                                submit into a Louisiana based magazine and my portfolio to enhance my
+                                                career.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="client-box">
+                                        <div class="client-head">
+                                            <div class="client-stars">
+                                                <div class="stars-wrap">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                </div>
+                                                <h5>Sophia Luangrath</h5>
+                                            </div>
+                                            <h3 class="client-head-txt">
+                                                Incredible
+                                            </h3>
+                                        </div>
+                                        <div class="client-content">
+                                            <p>Ryelle took the time to walk me through my resume, experience and
+                                                interview process. Even after I got hired she checked in with me! Gave
+                                                me awesome piece of advice and different angles on certain processes.
+                                                She super amazing and personal, would recommend her to anyone!.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="client-box">
+                                        <div class="client-head">
+                                            <div class="client-stars">
+                                                <div class="stars-wrap">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                </div>
+                                                <h5>Rachael</h5>
+                                            </div>
+                                            <h3 class="client-head-txt">
+                                                “Life-Changing”
+                                            </h3>
+                                        </div>
+                                        <div class="client-content">
+                                            <p>Ryelle helped me with my modeling career she took my photos and I was
+                                                able to
+                                                submit into a Louisiana based magazine and my portfolio to enhance my
+                                                career.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="client-box">
+                                        <div class="client-head">
+                                            <div class="client-stars">
+                                                <div class="stars-wrap">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                </div>
+                                                <h5>Cardijah Green</h5>
+                                            </div>
+                                            <h3 class="client-head-txt">
+                                                Extremely Supportive”
+                                            </h3>
+                                        </div>
+                                        <div class="client-content">
+                                            <p>Ryelle helped me with my modeling career she took my photos and I was
+                                                able to
+                                                submit into a Louisiana based magazine and my portfolio to enhance my
+                                                career.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="client-box">
+                                        <div class="client-head">
+                                            <div class="client-stars">
+                                                <div class="stars-wrap">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                </div>
+                                                <h5>Rachael</h5>
+                                            </div>
+                                            <h3 class="client-head-txt">
+                                                “Life-Changing”
+                                            </h3>
+                                        </div>
+                                        <div class="client-content">
+                                            <p>Ryelle helped me with my modeling career she took my photos and I was
+                                                able to
+                                                submit into a Louisiana based magazine and my portfolio to enhance my
+                                                career.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="client-box">
+                                        <div class="client-head">
+                                            <div class="client-stars">
+                                                <div class="stars-wrap">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                    <img src="./img/star.svg" alt="">
+                                                </div>
+                                                <h5>Cardijah Green</h5>
+                                            </div>
+                                            <h3 class="client-head-txt">
+                                                Extremely Supportive”
+                                            </h3>
+                                        </div>
+                                        <div class="client-content">
+                                            <p>Ryelle helped me with my modeling career she took my photos and I was
+                                                able to
+                                                submit into a Louisiana based magazine and my portfolio to enhance my
+                                                career.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- work ends -->
+
+            <!-- blog starts -->
+            <div class="blog-wrap">
+                <div class="container">
+
+                </div>
+            </div>
+            <!-- blog ends -->
+
 
 
         </div>
@@ -118,6 +289,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/common.js"></script>
     <script src="js/home.js"></script>
 </body>
