--- a/index copy.html
+++ b/index copy.html
@@ -291,6 +291,14 @@
             </div>
 
 
+            <div class="step-box">
+                <div class="step-btn">
+                    <div class="button"><span>Step 1</span></div>
+                </div>
+                <h4>Define Goals</h4>
+                <p>Comprehensive understanding and tailored support, What You’ve Done So Far</p>
+            </div>
+
 
         </div>
     </div>
