--- a/index.html
+++ b/index.html
@@ -450,6 +450,33 @@
             </div>
             <!-- clients-ends -->
 
+            <!-- rates-starts -->
+            <div class="rates-wrap">
+                <div class="scrolling-rates">
+                    <section class="rates-message">
+                        <p><span class="rate">80%</span> PLACEMENT RATE</p>
+                        <p><span class="rate">95%</span> INVESTMENT RATE</p>
+                        <p><span class="rate">80%</span> PLACEMENT RATE</p>
+                        <p><span class="rate">95%</span> INVESTMENT RATE</p>
+                        <p><span class="rate">80%</span> PLACEMENT RATE</p>
+                        <p><span class="rate">95%</span> INVESTMENT RATE</p>
+                        <p><span class="rate">80%</span> PLACEMENT RATE</p>
+                        <p><span class="rate">95%</span> INVESTMENT RATE</p>
+                    </section>
+                    <section class="rates-message">
+                        <p><span class="rate">80%</span> PLACEMENT RATE</p>
+                        <p><span class="rate">95%</span> INVESTMENT RATE</p>
+                        <p><span class="rate">80%</span> PLACEMENT RATE</p>
+                        <p><span class="rate">95%</span> INVESTMENT RATE</p>
+                        <p><span class="rate">80%</span> PLACEMENT RATE</p>
+                        <p><span class="rate">95%</span> INVESTMENT RATE</p>
+                        <p><span class="rate">80%</span> PLACEMENT RATE</p>
+                        <p><span class="rate">95%</span> INVESTMENT RATE</p>
+                    </section>
+                </div>
+            </div>
+            <!-- rates-ends -->
+
             <!-- industry-starts -->
             <div class="industries-wrap">
                 <div class="container">
@@ -698,6 +725,217 @@
             <div class="wave-wrap">
             </div>
             <!-- wave-ends -->
+
+            <!-- steps-starts -->
+            <div class="steps-wrap">
+                <div class="container">
+                    <div class="comm-head">
+                        <h2>OUR unique HIRING process
+                            tailored to fit everyone’s need</h2>
+                    </div>
+                    <div class="steps-container">
+                        <div class="steps-bg">
+                            <img src="./img/steps-bg.svg" alt="">
+                        </div>
+                        <div class="step-box">
+                            <div class="step-btn">
+                                <div class="button"><span>Step 1</span></div>
+                            </div>
+                            <h4>Define Goals</h4>
+                            <p>Comprehensive understanding and tailored support, What You’ve Done So Far</p>
+                        </div>
+                        <div class="step-box">
+                            <div class="step-btn">
+                                <div class="button"><span>Step 2</span></div>
+                            </div>
+                            <div class="step-img">
+                                <img src="./img/steps-illus-2.svg" alt="">
+                            </div>
+                            <h4>Pre-plan with Hiring Manager </h4>
+                            <p>Job req. form, job description, duties, responsibilities, travel, reporting, background,
+                                hiring process, internal promotion, compensation, attracting top talent, company image,
+                                selling points, total compensation, benefits, manager background, and relocation.</p>
+                        </div>
+                        <div class="step-box">
+                            <div class="step-btn">
+                                <div class="button"><span>Step 3</span></div>
+                            </div>
+                            <div class="step-img">
+                                <img src="./img/steps-illus-3.svg" alt="">
+                            </div>
+                            <h4>Comprehensive Sourcing</h4>
+                            <p> - Target/competitor companies, internal database, weekly candidate outreach</p>
+                        </div>
+                        <div class="step-box">
+                            <div class="step-btn">
+                                <div class="button"><span>Step 4</span></div>
+                            </div>
+                            <div class="step-img">
+                                <img src="./img/steps-illus-4.svg" alt="">
+                            </div>
+                            <h4>Qualify Candidates</h4>
+                            <p>Qualify Candidates - In-depth interview, start date, background, skills, career goals
+                                tailored to the req, earning expectations, preparedness, family/relocation, and counter
+                                offers.</p>
+                        </div>
+                        <div class="step-box">
+                            <div class="step-btn">
+                                <div class="button"><span>Step 5</span></div>
+                            </div>
+                            <div class="step-img">
+                                <img src="./img/steps-illus-5.svg" alt="">
+                            </div>
+                            <h4>Shortlist Presentations</h4>
+                            <p>We present a shortlist of top candidates with resumes and comprehensive summaries</p>
+                        </div>
+                        <div class="step-box">
+                            <div class="step-btn">
+                                <div class="button"><span>Step 6</span></div>
+                            </div>
+                            <div class="step-img">
+                                <img src="./img/steps-illus-6.svg" alt="">
+                            </div>
+                            <h4>Interviews</h4>
+                            <p>Coordinate Interviews, including scheduling and candidate preparation</p>
+                        </div>
+                        <div class="step-box">
+                            <div class="step-btn">
+                                <div class="button"><span>Step 7</span></div>
+                            </div>
+                            <div class="step-img">
+                                <img src="./img/steps-illus-7.svg" alt="">
+                            </div>
+                            <h4>Debriefing</h4>
+                            <p>We debrief candidates after interviews, gather feedback, and guide the next steps.</p>
+                        </div>
+                        <div class="step-box">
+                            <div class="step-btn">
+                                <div class="button"><span>Step 8</span></div>
+                            </div>
+                            <div class="step-img">
+                                <img src="./img/steps-illus-8.svg" alt="">
+                            </div>
+                            <h4>Employment Negotiations</h4>
+                            <p>We assist with employment negotiations, facilitate acceptance, and establish a start date
+                            </p>
+                        </div>
+                        <div class="step-box">
+                            <div class="step-btn">
+                                <div class="button"><span>Step 9</span></div>
+                            </div>
+                            <div class="step-img">
+                                <img src="./img/steps-illus-9.svg" alt="">
+                            </div>
+                            <h4>Candidate Guidance</h4>
+                            <p>Assist Candidate With Transition Establish Start Date, provide relocation advice,
+                                guidance and support as necessary.</p>
+                        </div>
+                        <div class="step-box">
+                            <div class="step-btn">
+                                <div class="button"><span>Step 10</span></div>
+                            </div>
+                            <div class="step-img">
+                                <img src="./img/steps-illus-10.svg" alt="">
+                            </div>
+                            <h4>Follow Up</h4>
+                            <p>Follow Up 30, 60, and 90 Days After Hire Candidate - We follow up with the candidate 30,
+                                60, and 90 days after hire to assess progress and compare with expectations.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <!-- steps-ends -->
+
+            <!-- About Starts -->
+            <div class="about-wrap">
+                <div class="about-bg"></div>
+                <div class="about-container">
+                    <div class="container">
+                        <div class="comm-head">
+                            <h2>ABOUT ME & HAPPY LIFE </h2>
+                        </div>
+                        <div class="about-wrap-inner">
+                            <div class="f-row f-2">
+                                <div class="f-col">
+                                    <div class="about-box">
+                                        <div class="about-box-bg">
+                                            <img src="./img/about-box-bg-1.svg" alt="">
+                                        </div>
+                                        <div class="about-img">
+                                            <img src="./img/about-1.png" alt="">
+                                        </div>
+                                        <div class="about-txt">
+                                            <h4><img src="./img/about-icon-1.svg" alt="">Ryelle French</h4>
+                                            <h6>C.E.O</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="f-col">
+                                    <div class="about-box">
+                                        <div class="about-box-bg about-box-bg-2">
+                                            <img src="./img/about-box-bg-2.svg" alt="">
+                                        </div>
+                                        <div class="about-img">
+                                            <img src="./img/about-2.png" alt="">
+                                        </div>
+                                        <div class="about-txt">
+                                            <h4><img src="./img/about-icon-2.svg" alt="">Leonora Johnson</h4>
+                                            <h6>Co partner</h6>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="about-btm-txt">
+                                <p class="about-btm-txt-1">I ventured into the world of entrepreneurship by
+                                    starting my own recruitment
+                                    agency after graduating with my Bachelor's in 2020, following in my family's
+                                    footsteps. With five years of expertise as a full-cycle recruiter for
+                                    startups and established companies, I excel at pairing top talent with the
+                                    ideal employer. And, I have a deep commitment to promoting diversity,
+                                    equity, and inclusion (DEI) across all roles, whether it's in tech, sales,
+                                    marketing, operations, or beyond if it aligns with a company's mission. </p>
+                                <p class="about-btm-txt-2">My aim is to turn my agency into a creative hub that
+                                    bridges job seekers with
+                                    imaginative and innovative opportunities, while empowering them in their
+                                    career journeys and supporting client success.</p>
+                                <p class="about-btm-txt-3">I'm eager to continue learning and growing in this
+                                    field and appreciate your
+                                    support. With a robust network and resources, we offer comprehensive
+                                    recruitment services, including permanent, temporary, and contract
+                                    placements. Whether you're a job seeker looking for your next challenge or
+                                    an employer building your ideal team, we're here to help you reach your
+                                    goals.</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <!-- About Ends -->
+
+
+            <!-- candidate-starts -->
+            <div class="candidate-wrap">
+                <div class="container">
+                    <div class="candidate-head">
+                        <div class="comm-head">
+                            <h6>Candidate</h6>
+                            <h2>You are Just one step away
+                                from your dream career</h2>
+                            <p>Apply to the open req we spoke about</p>
+                        </div>
+                    </div>
+                    <div class="candidate-form-box">
+                        <div class="candidate-form">
+
+                        </div>
+                        <div class="candidate-form-txt"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- candidate-ends -->
 
 
         </div>
