--- a/index copy.html
+++ b/index copy.html
@@ -295,6 +295,9 @@
                 <div class="step-btn">
                     <div class="button"><span>Step 1</span></div>
                 </div>
+                <div class="step-img">
+                    <img src="./img/steps-illus-2.svg" alt="">
+                </div>
                 <h4>Define Goals</h4>
                 <p>Comprehensive understanding and tailored support, What You’ve Done So Far</p>
             </div>
