--- a/index.html
+++ b/index.html
@@ -929,13 +929,64 @@
                     </div>
                     <div class="candidate-form-box">
                         <div class="candidate-form">
-
+                            <form action="">
+                                <div class="form-grp">
+                                    <input class="form-field" placeholder="Your Name" type="text">
+                                </div>
+                                <div class="form-grp">
+                                    <input class="form-field" placeholder="Your Email id" type="email">
+                                </div>
+                                <div class="form-grp">
+                                    <input class="form-field" placeholder="Your Phone number" type="number">
+                                </div>
+                                <div class="upload-wrap">
+                                    <h4>Upload your Resume</h4>
+                                    <p>Max. File size 20Mb</p>
+                                    <div class="profile-image-wrap">
+                                        <div id="img-preview">
+                                            <img src="./img/folder.svg" alt="">
+                                        </div>
+                                        <input type="file" id="choose-file" name="choose-file"
+                                            accept="application/msword, application/vnd.ms-excel,text/plain, application/pdf/*">
+                                        <label for="choose-file">
+                                        </label>
+                                    </div>
+                                </div>
+                                <button class="submit-btn">Submit Resume</button>
+                            </form>
                         </div>
-                        <div class="candidate-form-txt"></div>
+                        <div class="candidate-form-txt">
+                            <h4>Get Clarity, purpose &
+                                career fulfilment</h4>
+                            <p>Craving career clarity? </p>
+                            <p>Want to strategically and intentionally
+                                design your career on purpose? </p>
+                            <p>And then follow a proven system to
+                                take that dream and turn it into a reality? </p>
+                            <p>Sounds like you need a full-blown
+                                Career Glow Up</p>
+                            <img src="./img/arrow-big.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- candidate-ends -->
+
+
+            <!-- partner starts -->
+            <div class="partner-wrap">
+                <div class="partner-img">
+                    <img src="./img/bottom-star.png" alt="">
+                </div>
+                <div class="container">
+                    <div class="partner-box">
+                        <h3>if you are a rockstar client please hit the button to request for partnership</h3>
+                        <a href="" class="button blue"><span>Partner with us <img src="./img/arrow-right.svg"
+                                    alt=""></span></a>
+                    </div>
+                </div>
+            </div>
+            <!-- partner ends -->
 
 
         </div>
@@ -943,7 +994,7 @@
     <!-- Main Container Ends -->
 
 
-    <footer id="footer" class="footer green"></footer>
+    <footer id="footer" class="footer"></footer>
     <!-- Footer Ends -->
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
