--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
             <!-- work starts -->
             <div class="work-client-wrap">
+
                 <div class="work-wrap">
                     <div class="work-tags">
                         <div class="work-tag work-tag-1">professional</div>
@@ -264,6 +265,29 @@
                         </div>
                     </div>
                 </div>
+                <div class="work-stickers">
+                    <div class="sticker sticker-work-1">
+                        <img src="./img/sticker-work-1.svg" alt="">
+                    </div>
+                    <div class="sticker sticker-work-2">
+                        <img src="./img/sticker-work-2.svg" alt="">
+                    </div>
+                    <div class="sticker sticker-work-3">
+                        <img src="./img/sticker-work-3.svg" alt="">
+                    </div>
+                    <div class="sticker sticker-work-4">
+                        <img src="./img/sticker-work-4.svg" alt="">
+                    </div>
+                    <div class="sticker sticker-work-5">
+                        <img src="./img/sticker-work-5.svg" alt="">
+                    </div>
+                    <div class="sticker sticker-work-6">
+                        <img src="./img/sticker-work-6.svg" alt="">
+                    </div>
+                    <div class="sticker sticker-work-7">
+                        <img src="./img/sticker-work-70.svg" alt="">
+                    </div>
+                </div>
             </div>
             <!-- work ends -->
 
@@ -276,7 +300,7 @@
                                         alt=""></span></a>
                         </div>
                         <div class="f-row">
-                            <div class="w50">
+                            <div class="w50 w-990-100">
                                 <a href="" class="blog-box">
                                     <div class="blog-img">
                                         <img src="./img/blog-1.png" alt="">
@@ -294,7 +318,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="w50">
+                            <div class="w50 w-990-100">
                                 <div class="f-row">
                                     <div class="w100">
                                         <div class="blog-head">
@@ -302,7 +326,7 @@
                                             <h2>What’s hot on the blog</h2>
                                         </div>
                                     </div>
-                                    <div class="w50">
+                                    <div class="w50  w-640-100">
                                         <a href="" class="blog-box">
                                             <div class="blog-img">
                                                 <img src="./img/blog-3.png" alt="">
@@ -312,7 +336,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="w50">
+                                    <div class="w50 w-640-100">
                                         <a href="" class="blog-box">
                                             <div class="blog-img">
                                                 <img src="./img/blog-4.png" alt="">
@@ -322,7 +346,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="w50">
+                                    <div class="w50 w-640-100">
                                         <a href="" class="blog-box">
                                             <div class="blog-img">
                                                 <img src="./img/blog-5.png" alt="">
@@ -332,7 +356,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <a href="" class="w50">
+                                    <a href="" class="w50 w-640-100">
                                         <div class="blog-box border-round">
                                             <div class="blog-img">
                                                 <img src="./img/blog-6.png" alt="">
@@ -364,7 +388,7 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="clients-logo-wrap">
-                                    <div class="f-row f-4">
+                                    <div class="f-row f-4 ">
                                         <div class="f-col">
                                             <div class="clients-logo-box">
                                                 <img src="./img/clients-logo-1.svg" alt="">
@@ -485,7 +509,7 @@
                         <p>We specialize in a variety of industries, including but not limited to:</p>
                     </div>
                     <div class="industries-boxes">
-                        <div class="f-row f-4">
+                        <div class="f-row f-4 f-1440-3 f-990-2 f-640-1">
                             <div class="f-col">
                                 <div class="industry-box">
                                     <div class="industry-img-box">
@@ -856,7 +880,7 @@
                             <h2>ABOUT ME & HAPPY LIFE </h2>
                         </div>
                         <div class="about-wrap-inner">
-                            <div class="f-row f-2">
+                            <div class="f-row f-2 f-990-1 ">
                                 <div class="f-col">
                                     <div class="about-box">
                                         <div class="about-box-bg">
